# chatterbox.cpp

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md
cmake/: tts-cppConfig.cmake
include/tts-cpp/chatterbox/: s3gen_pipeline.h
patches/: README.md  ggml-metal-chatterbox-ops.patch  ggml-opencl-chatterbox-ops.patch
scripts/: convert-s3gen-to-gguf.py  convert-t3-mtl-to-gguf.py  convert-t3-turbo-to-gguf.py  dump-campplus-reference.py  dump-s3gen-reference.py  dump-streaming-reference.py  dump-t3-mtl-reference.py  requantize-s3gen.py  setup-ggml.sh  synthesize.sh  termux-opencl-env.sh
src/: campplus.cpp  campplus.h  chatterbox_cli.cpp  chatterbox_engine.cpp  chatterbox_t3_internal.h  chatterbox_tts.cpp  gpt2_bpe.cpp  gpt2_bpe.h  main.cpp  mel2wav.cpp  mtl_tokenizer.cpp  s3gen_pipeline.h  s3tokenizer.cpp  s3tokenizer.h  t3_mtl.cpp  t3_mtl.h  test_campplus.cpp  test_s3gen.cpp  test_streaming.cpp  test_t3_mtl.cpp  test_t3_mtl_stages.cpp  test_voice_encoder.cpp  test_voice_features.cpp  voice_encoder.cpp  voice_encoder.h  voice_features.cpp  voice_features.h
